crates/gpui-form-macros/tests/ui/fail/invalid_array_id_literal.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
struct Example {
    #[form(array(id = "not-a-field"))]
    items: Vec<Item>,
}

struct Item;

fn main() {}
